--- a/lab3-1.ipynb
+++ b/lab3-1.ipynb
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "53d221fd",
    "metadata": {
     "ExecuteTime": {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "cf165e82",
    "metadata": {
     "ExecuteTime": {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6688fc4e",
    "metadata": {
     "ExecuteTime": {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "18be1d23",
    "metadata": {
     "ExecuteTime": {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8d952cf0",
    "metadata": {
     "ExecuteTime": {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "8940eccd",
    "metadata": {
     "ExecuteTime": {
@@ -566,9 +566,8 @@
     "    # Llenado de diccionarios\n",
     "    for idx, word in enumerate(unique_words):\n",
     "        # Aprox 2 lineas para agregar\n",
-    "        word_to_idx[word] = defaultdict(lambda:vocab_size -1)\n",
-    "        idx_to_word[idx] = defaultdict(lambda: 'UNK')\n",
-    "        # YOUR CODE HERE\n",
+    "        word_to_idx[word] = idx\n",
+    "        idx_to_word[idx] = word\n",
     "        \n",
     "    return word_to_idx, idx_to_word, num_sentences, vocab_size\n",
     "\n",
