funciones de implementacion

--- a/lab3-1.ipynb
+++ b/lab3-1.ipynb
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8940eccd",
    "metadata": {
     "ExecuteTime": {
@@ -516,8 +516,8 @@
      "output_type": "stream",
      "text": [
       "Tenemos 100 secuencias y 4 tokens unicos incluyendo UNK\n",
-      "El indice de 'b' es defaultdict(<function seqs_to_dicts.<locals>.<lambda> at 0x0000026DA29A5080>, {})\n",
-      "La palabra con indice 1 es defaultdict(<function seqs_to_dicts.<locals>.<lambda> at 0x0000026DA29A5940>, {})\n"
+      "El indice de 'b' es 1\n",
+      "La palabra con indice 1 es b\n"
      ]
     }
    ],
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "8e17b1e6",
    "metadata": {
     "ExecuteTime": {
@@ -637,9 +637,11 @@
     {
      "data": {
       "text/html": [
-       "<hr style=\"height:10px;border:none;color:#f00;background-color:#f00;\" />\n",
-       "        <div class=\"alert alert-box alert-danger\">\n",
-       "        <h1> <!--{id:\"WRONGMARK\", marks:\"5\"}--> Test failed ✘ [0/5] marks  </h1> </div>"
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -647,18 +649,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'collections.defaultdict' object has no attribute 'lower'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m(check_scalar(\u001b[38;5;28mlen\u001b[39m(idx_to_word), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0xc51b9ba8\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m tick\u001b[38;5;241m.\u001b[39mmarks(\u001b[38;5;241m5\u001b[39m):        \n\u001b[1;32m----> 8\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m(\u001b[43mcheck_string\u001b[49m\u001b[43m(\u001b[49m\u001b[43midx_to_word\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m0xe8b7be43\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m)\n",
-      "File \u001b[1;32mc:\\Users\\jjcam\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\jhwutils\\checkarr.py:82\u001b[0m, in \u001b[0;36mcheck_string\u001b[1;34m(s, h)\u001b[0m\n\u001b[0;32m     81\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mcheck_string\u001b[39m(s, h):\n\u001b[1;32m---> 82\u001b[0m     hash_f \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mhex\u001b[39m(crc32(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43ms\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlower\u001b[49m()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mencode(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mutf8\u001b[39m\u001b[38;5;124m\"\u001b[39m)))\n\u001b[0;32m     83\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m hash_f \u001b[38;5;241m!=\u001b[39m h:\n\u001b[0;32m     84\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWarning: Got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ms\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m -> \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhash_f\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, expected \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mh\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'collections.defaultdict' object has no attribute 'lower'"
-     ]
     }
    ],
    "source": [
@@ -699,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f2d35905",
    "metadata": {
     "ExecuteTime": {
@@ -719,7 +709,17 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Largo del training set 80\n",
+      "Largo del validation set 10\n",
+      "Largo del test set 10\n"
+     ]
+    }
+   ],
    "source": [
     "from torch.utils import data\n",
     "\n",
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a50596f4",
    "metadata": {
     "ExecuteTime": {
@@ -830,7 +830,16 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encodeado de 'a' con forma (4,)\n",
+      "Encodeado de la secuencia 'a b' con forma (2, 4, 1).\n"
+     ]
+    }
+   ],
    "source": [
     "def one_hot_encode(idx, vocab_size):\n",
     "    \"\"\"\n",
@@ -933,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e83d6394",
    "metadata": {
     "ExecuteTime": {
@@ -1002,27 +1011,26 @@
     "     vocab_size: Dimensión del vocabulario\n",
     "    \"\"\"\n",
     "    # Aprox 5 lineas para \n",
-    "    # Definir la matriz de pesos (input del hidden state)\n",
-    "    # U = \n",
-    "    # Definir la matriz de pesos de los calculos recurrentes\n",
-    "    # V = \n",
-    "    # Definir la matriz de pesos del hidden state a la salida\n",
-    "    # W = \n",
-    "    # Bias del hidden state\n",
-    "    # b_hidden = \n",
-    "    # Bias de la salida\n",
-    "    # b_out = \n",
+    "    # Inicializamos matrices vacías con las formas adecuadas\n",
+    "    U = np.zeros((hidden_size, vocab_size))\n",
+    "    V = np.zeros((hidden_size, hidden_size))\n",
+    "    W = np.zeros((vocab_size, hidden_size))\n",
+    "    \n",
+    "    \n",
+    "    # Bias\n",
+    "    b_hidden = np.zeros((hidden_size,1))\n",
+    "    b_out = np.zeros((vocab_size,1))\n",
+    "    \n",
+    "    \n",
     "    # Para estas use np.zeros y asegurese de darle las dimensiones correcta a cada elemento\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "    \n",
     "    # Aprox 3 lineas para inicializar los pesos de forma ortogonal usando la\n",
     "    # funcion init_orthogonal\n",
-    "    # U =\n",
-    "    # V = \n",
-    "    # W = \n",
+    "    U = init_orthogonal(U)\n",
+    "    V = init_orthogonal(V)\n",
+    "    W = init_orthogonal(W)\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "    \n",
     "    # Return parameters as a tuple\n",
     "    return U, V, W, b_hidden, b_out\n",
@@ -1033,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "869c3065",
    "metadata": {
     "ExecuteTime": {
@@ -1054,7 +1062,88 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "with tick.marks(5):        \n",
     "    assert check_hash(params[0], ((50, 4), 80.24369675632171))\n",
