funciones de activación

--- a/lab3-1.ipynb
+++ b/lab3-1.ipynb
@@ -1216,9 +1216,7 @@
     "    \"\"\"\n",
     "    x_safe = x + 1e-12 #Evitar ceros\n",
     "    # Aprox 1 linea sobre x_safe para implementar la funcion\n",
-    "    # f =\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    f = 1 / (1 + np.exp(-x_safe))\n",
     "    \n",
     "    # Regresa la derivada de la funcion\n",
     "    if derivative: \n",
@@ -1237,9 +1235,7 @@
     "    \"\"\"\n",
     "    x_safe = x + 1e-12 #Evitar ceros\n",
     "    # Aprox 1 linea sobre x_safe para implementar la funcion\n",
-    "    # f =\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    f = np.tanh(x_safe)\n",
     "    \n",
     "    # Regresa la derivada de la funcion\n",
     "    if derivative: \n",
@@ -1258,9 +1254,7 @@
     "    \"\"\"\n",
     "    x_safe = x + 1e-12 #Evitar ceros\n",
     "    # Aprox 1 linea sobre x_safe para implementar la funcion\n",
-    "    # f =\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    f = np.exp(x_safe) / np.sum(np.exp(x_safe))\n",
     "    \n",
     "    # Regresa la derivada de la funcion\n",
     "    if derivative: \n",
