--- a/lab3-1.ipynb
+++ b/lab3-1.ipynb
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "dd9c9363",
    "metadata": {
     "ExecuteTime": {
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "86e6f5b7",
    "metadata": {
     "ExecuteTime": {
@@ -1287,7 +1287,56 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "with tick.marks(5):        \n",
     "    assert check_hash(sigmoid(params[0][0]), ((4,), 6.997641543410888))\n",
@@ -1362,21 +1411,14 @@
     "    # Para cada elemento en la secuencia input\n",
     "    for t in range(len(inputs)):\n",
     "\n",
-    "        # Aprox 1 line para\n",
-    "        # Calculo del nuevo hidden state usando tanh\n",
-    "        # Recuerden que al ser el hidden state tienen que usar los pesos del input multiplicado por el input\n",
-    "        #  a esto sumarle los pesos recurrentes por el hidden state y finalmente sumarle b\n",
-    "        # hidden_state =\n",
+    "        x_t = inputs[t]   \n",
+    "\n",
+    "        # Calcular nuevo hidden state\n",
+    "        hidden_state = tanh(np.dot(U, x_t) + np.dot(V, hidden_state) + b_hidden)\n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
     "        \n",
-    "        # Aprox 1 linea\n",
-    "        # para el calculo del output\n",
-    "        # Al ser la salida, deben usar softmax sobre la multiplicación de pesos de salida con el hidden_state actual\n",
-    "        #   es decir el calculado en el paso anterior y siempre sumarle su bias correspondiente\n",
-    "        # out = \n",
+    "        out = softmax(np.dot(W, hidden_state) + b_out)\n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
     "        \n",
     "        # Guardamos los resultados y continuamos\n",
     "        outputs.append(out)\n",
