--- a/lab3-1.ipynb
+++ b/lab3-1.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b4fa65b0",
    "metadata": {
     "ExecuteTime": {
@@ -46,97 +46,7 @@
      "start_time": "2023-08-05T23:29:13.420034Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting https://github.com/johnhw/jhwutils/zipball/master\n",
-      "  Downloading https://github.com/johnhw/jhwutils/zipball/master\n",
-      "     - 0 bytes ? 0:00:00\n",
-      "     | 83.9 kB 408.3 kB/s 0:00:00\n",
-      "     / 119.1 kB 329.1 kB/s 0:00:00\n",
-      "  Preparing metadata (setup.py): started\n",
-      "  Preparing metadata (setup.py): finished with status 'done'\n",
-      "Building wheels for collected packages: jhwutils\n",
-      "  Building wheel for jhwutils (setup.py): started\n",
-      "  Building wheel for jhwutils (setup.py): finished with status 'done'\n",
-      "  Created wheel for jhwutils: filename=jhwutils-1.3-py3-none-any.whl size=41858 sha256=ad83d60e2e9a643e2b9fe2ccdd7765c7e7445f4a312f77dce3197cc973cdaf39\n",
-      "  Stored in directory: C:\\Users\\jjcam\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-o83tdj7u\\wheels\\ea\\a5\\c1\\a5a791fc4679b6b51da9afbde7aaf0a44719030ae5715746d3\n",
-      "Successfully built jhwutils\n",
-      "Installing collected packages: jhwutils\n",
-      "  Attempting uninstall: jhwutils\n",
-      "    Found existing installation: jhwutils 1.3\n",
-      "    Uninstalling jhwutils-1.3:\n",
-      "      Successfully uninstalled jhwutils-1.3\n",
-      "Successfully installed jhwutils-1.3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution ~ip (C:\\Users\\jjcam\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages)\n",
-      "  DEPRECATION: Building 'jhwutils' using the legacy setup.py bdist_wheel mechanism, which will be removed in a future version. pip 25.3 will enforce this behaviour change. A possible replacement is to use the standardized build interface by setting the `--use-pep517` option, (possibly combined with `--no-build-isolation`), or adding a `pyproject.toml` file to the source tree of 'jhwutils'. Discussion can be found at https://github.com/pypa/pip/issues/6334\n",
-      "WARNING: Ignoring invalid distribution ~ip (C:\\Users\\jjcam\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution ~ip (C:\\Users\\jjcam\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: scikit-image in c:\\users\\jjcam\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (0.25.2)\n",
-      "Requirement already satisfied: numpy>=1.24 in c:\\users\\jjcam\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from scikit-image) (1.26.4)\n",
-      "Requirement already satisfied: scipy>=1.11.4 in c:\\users\\jjcam\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from scikit-image) (1.12.0)\n",
-      "Requirement already satisfied: networkx>=3.0 in c:\\users\\jjcam\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from scikit-image) (3.3)\n",
-      "Requirement already satisfied: pillow>=10.1 in c:\\users\\jjcam\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from scikit-image) (10.3.0)\n",
-      "Requirement already satisfied: imageio!=2.35.0,>=2.33 in c:\\users\\jjcam\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from scikit-image) (2.37.0)\n",
-      "Requirement already satisfied: tifffile>=2022.8.12 in c:\\users\\jjcam\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from scikit-image) (2025.6.11)\n",
-      "Requirement already satisfied: packaging>=21 in c:\\users\\jjcam\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from scikit-image) (24.0)\n",
-      "Requirement already satisfied: lazy-loader>=0.4 in c:\\users\\jjcam\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from scikit-image) (0.4)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution ~ip (C:\\Users\\jjcam\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution ~ip (C:\\Users\\jjcam\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution ~ip (C:\\Users\\jjcam\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting https://github.com/AlbertS789/lautils/zipball/master\n",
-      "  Downloading https://github.com/AlbertS789/lautils/zipball/master\n",
-      "     - 0 bytes ? 0:00:00\n",
-      "     - 4.2 kB ? 0:00:00\n",
-      "  Preparing metadata (setup.py): started\n",
-      "  Preparing metadata (setup.py): finished with status 'done'\n",
-      "Building wheels for collected packages: lautils\n",
-      "  Building wheel for lautils (setup.py): started\n",
-      "  Building wheel for lautils (setup.py): finished with status 'done'\n",
-      "  Created wheel for lautils: filename=lautils-1.0-py3-none-any.whl size=2831 sha256=50432645cb8e0e1c64c0f2c1f04422edb4f5e4a1fcfbbf31ea98d08bb31f6ca8\n",
-      "  Stored in directory: C:\\Users\\jjcam\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-2xc7wt8c\\wheels\\bf\\c9\\fa\\c5e1b05da8bca40206e1a779b037d0fd93eea00e7fcfa51b6e\n",
-      "Successfully built lautils\n",
-      "Installing collected packages: lautils\n",
-      "Successfully installed lautils-1.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution ~ip (C:\\Users\\jjcam\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages)\n",
-      "  DEPRECATION: Building 'lautils' using the legacy setup.py bdist_wheel mechanism, which will be removed in a future version. pip 25.3 will enforce this behaviour change. A possible replacement is to use the standardized build interface by setting the `--use-pep517` option, (possibly combined with `--no-build-isolation`), or adding a `pyproject.toml` file to the source tree of 'lautils'. Discussion can be found at https://github.com/pypa/pip/issues/6334\n",
-      "WARNING: Ignoring invalid distribution ~ip (C:\\Users\\jjcam\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution ~ip (C:\\Users\\jjcam\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Una vez instalada la librería por favor, recuerden volverla a comentar.\n",
     "#!pip install -U --force-reinstall --no-cache https://github.com/johnhw/jhwutils/zipball/master\n",
@@ -146,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "53d221fd",
    "metadata": {
     "ExecuteTime": {
@@ -185,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "cf165e82",
    "metadata": {
     "ExecuteTime": {
@@ -214,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "6688fc4e",
    "metadata": {
     "ExecuteTime": {
@@ -272,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "18be1d23",
    "metadata": {
     "ExecuteTime": {
@@ -301,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "8d952cf0",
    "metadata": {
     "ExecuteTime": {
@@ -405,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "6cfc979b",
    "metadata": {
     "ExecuteTime": {
@@ -491,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "8940eccd",
    "metadata": {
     "ExecuteTime": {
@@ -580,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "8e17b1e6",
    "metadata": {
     "ExecuteTime": {
@@ -689,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "f2d35905",
    "metadata": {
     "ExecuteTime": {
@@ -810,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "a50596f4",
    "metadata": {
     "ExecuteTime": {
@@ -942,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "e83d6394",
    "metadata": {
     "ExecuteTime": {
@@ -1041,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "869c3065",
    "metadata": {
     "ExecuteTime": {
@@ -1185,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "dd9c9363",
    "metadata": {
     "ExecuteTime": {
@@ -1266,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "86e6f5b7",
    "metadata": {
     "ExecuteTime": {
@@ -1372,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "9bb06776",
    "metadata": {
     "ExecuteTime": {
@@ -1429,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "1c095221",
    "metadata": {
     "ExecuteTime": {
@@ -1450,7 +1360,36 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Secuencia Input:\n",
+      "['a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b']\n",
+      "Secuencia Target:\n",
+      "['a', 'a', 'a', 'a', 'a', 'a', 'a', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'EOS']\n",
+      "Secuencia Predicha:\n",
+      "['a', 'b', 'a', 'a', 'a', 'EOS', 'EOS', 'EOS', 'EOS', 'EOS', 'EOS', 'EOS', 'b', 'b', 'b', 'b']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "test_input_sequence, test_target_sequence = training_set[0]\n",
     "\n",
@@ -1508,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "09c404d5",
    "metadata": {
     "ExecuteTime": {
@@ -1640,28 +1579,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "21b7b1d7",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-08-05T23:29:15.724695Z",
-     "start_time": "2023-08-05T23:29:15.710439Z"
-    },
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "e114a2a7bf6752fd90bf75a740001356",
-     "grade": true,
-     "grade_id": "cell-65758aa67361b673",
-     "locked": true,
-     "points": 20,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
+   "execution_count": 46,
+   "id": "35981fd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[46], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m loss, grads \u001b[38;5;241m=\u001b[39m \u001b[43mbackward_pass\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtest_input\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhidden_states\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_target\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m tick\u001b[38;5;241m.\u001b[39mmarks(\u001b[38;5;241m5\u001b[39m):        \n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m check_scalar(loss, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0xf0c8ccc9\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[45], line 59\u001b[0m, in \u001b[0;36mbackward_pass\u001b[1;34m(inputs, outputs, hidden_states, targets, params)\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[38;5;66;03m# Iteramos para cada elemento en la secuencia output\u001b[39;00m\n\u001b[0;32m     51\u001b[0m \u001b[38;5;66;03m# NB: Iteramos de regreso sobre t=N hasta 0\u001b[39;00m\n\u001b[0;32m     52\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mreversed\u001b[39m(\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(outputs))):\n\u001b[0;32m     53\u001b[0m \n\u001b[0;32m     54\u001b[0m     \u001b[38;5;66;03m# Aprox 1 linea para calcular la perdida cross-entry (un escalar)\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     57\u001b[0m     \u001b[38;5;66;03m# loss +=\u001b[39;00m\n\u001b[0;32m     58\u001b[0m     \u001b[38;5;66;03m# YOUR CODE HERE\u001b[39;00m\n\u001b[1;32m---> 59\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m()\n\u001b[0;32m     62\u001b[0m     d_o \u001b[38;5;241m=\u001b[39m outputs[t]\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[0;32m     63\u001b[0m     \u001b[38;5;66;03m# Aprox 1 linea para backpropagate en los output (derivada del cross-entropy)\u001b[39;00m\n\u001b[0;32m     64\u001b[0m     \u001b[38;5;66;03m# Si se sienten perdidos refieran a esta lectura: http://cs231n.github.io/neural-networks-case-study/#grad\u001b[39;00m\n\u001b[0;32m     65\u001b[0m     \u001b[38;5;66;03m# d_o[...] -=\u001b[39;00m\n\u001b[0;32m     66\u001b[0m     \u001b[38;5;66;03m# YOUR CODE HERE\u001b[39;00m\n",
+      "\u001b[1;31mNotImplementedError\u001b[0m: "
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "loss, grads = backward_pass(test_input, outputs, hidden_states, test_target, params)\n",
     "\n",
@@ -1710,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "7d0649f4",
    "metadata": {
     "ExecuteTime": {
