feat: advanced backpropagation

--- a/lab3-1.ipynb
+++ b/lab3-1.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "b4fa65b0",
    "metadata": {
     "ExecuteTime": {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "53d221fd",
    "metadata": {
     "ExecuteTime": {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "cf165e82",
    "metadata": {
     "ExecuteTime": {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "6688fc4e",
    "metadata": {
     "ExecuteTime": {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "18be1d23",
    "metadata": {
     "ExecuteTime": {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "8d952cf0",
    "metadata": {
     "ExecuteTime": {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "6cfc979b",
    "metadata": {
     "ExecuteTime": {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "8940eccd",
    "metadata": {
     "ExecuteTime": {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "8e17b1e6",
    "metadata": {
     "ExecuteTime": {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "f2d35905",
    "metadata": {
     "ExecuteTime": {
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "a50596f4",
    "metadata": {
     "ExecuteTime": {
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "e83d6394",
    "metadata": {
     "ExecuteTime": {
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "869c3065",
    "metadata": {
     "ExecuteTime": {
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "dd9c9363",
    "metadata": {
     "ExecuteTime": {
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "86e6f5b7",
    "metadata": {
     "ExecuteTime": {
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "id": "9bb06776",
    "metadata": {
     "ExecuteTime": {
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "id": "1c095221",
    "metadata": {
     "ExecuteTime": {
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "id": "09c404d5",
    "metadata": {
     "ExecuteTime": {
@@ -1524,48 +1524,34 @@
     "        # Aprox 1 linea para calcular la perdida cross-entry (un escalar)\n",
     "        # Hint: Sumen +1e-12 a cada output_t\n",
     "        # Hint2: Recuerden que la perdida es el promedio de multiplicar el logaritmo de los output con los targets\n",
-    "        # loss +=\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
-    "        \n",
+    "        loss += -np.average(targets[t] * np.log(outputs[t] + 1e-12))\n",
+    "\n",
     "        \n",
     "        d_o = outputs[t].copy()\n",
     "        # Aprox 1 linea para backpropagate en los output (derivada del cross-entropy)\n",
     "        # Si se sienten perdidos refieran a esta lectura: http://cs231n.github.io/neural-networks-case-study/#grad\n",
-    "        # d_o[...] -=\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        d_o = outputs[t].copy() - targets[t]\n",
     "        \n",
     "        # Aprox 1 lineas para hacer el backpropagation de W\n",
-    "        # d_W += np.dot(...)\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        d_W += np.outer(d_o, hidden_states[t])\n",
     "        d_b_out += d_o\n",
     "        \n",
     "        # Aprox 1 linea para hacer el backprop de h\n",
-    "        # d_h = \n",
     "        # Hint: Probablemente necesiten sacar la transpuesta de W\n",
     "        # Hint2: Recuerden sumar el bias correcto!\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        d_h = np.dot(W.T, d_o) + d_h_next\n",
     "        \n",
     "        # Aprox 1 linea para calcular el backprop en la funcion de activacion tanh\n",
-    "        # d_f = \n",
     "        # Hint: Recuerden pasar el parametro derivate=True a la funcion que definimos\n",
     "        # Hint2: Deben multiplicar con d_h\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        d_f = tanh(hidden_states[t], derivative=True) * d_h\n",
     "        d_b_hidden += d_f\n",
     "        \n",
     "        # Aprox 1 linea para backprop en U\n",
-    "        # d_U +=\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        d_U += np.outer(d_f, inputs[t])\n",
     "        \n",
     "        # Aprox 1 linea para backprop V\n",
-    "        # d_V +=\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        d_V += np.outer(d_f, hidden_states[t - 1]) if t > 0 else 0\n",
     "        d_h_next = np.dot(V.T, d_f)\n",
     "    \n",
     "    # Empaquetar las gradientes\n",
@@ -1573,26 +1559,62 @@
     "    \n",
     "    # Corte de gradientes\n",
     "    grads = clip_gradient_norm(grads)\n",
-    "    \n",
-    "    return loss, grads"
+    "\n",
+    "    return loss, grads\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "id": "35981fd0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NotImplementedError",
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got hash (50, 4), -16.2326425678578 but expected (50, 4), -16.16536590645467\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<hr style=\"height:10px;border:none;color:#f00;background-color:#f00;\" />\n",
+       "        <div class=\"alert alert-box alert-danger\">\n",
+       "        <h1> <!--{id:\"WRONGMARK\", marks:\"5\"}--> Test failed ✘ [0/5] marks  </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "AssertionError",
      "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[46], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m loss, grads \u001b[38;5;241m=\u001b[39m \u001b[43mbackward_pass\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtest_input\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhidden_states\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_target\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m tick\u001b[38;5;241m.\u001b[39mmarks(\u001b[38;5;241m5\u001b[39m):        \n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m check_scalar(loss, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0xf0c8ccc9\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[45], line 59\u001b[0m, in \u001b[0;36mbackward_pass\u001b[1;34m(inputs, outputs, hidden_states, targets, params)\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[38;5;66;03m# Iteramos para cada elemento en la secuencia output\u001b[39;00m\n\u001b[0;32m     51\u001b[0m \u001b[38;5;66;03m# NB: Iteramos de regreso sobre t=N hasta 0\u001b[39;00m\n\u001b[0;32m     52\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mreversed\u001b[39m(\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(outputs))):\n\u001b[0;32m     53\u001b[0m \n\u001b[0;32m     54\u001b[0m     \u001b[38;5;66;03m# Aprox 1 linea para calcular la perdida cross-entry (un escalar)\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     57\u001b[0m     \u001b[38;5;66;03m# loss +=\u001b[39;00m\n\u001b[0;32m     58\u001b[0m     \u001b[38;5;66;03m# YOUR CODE HERE\u001b[39;00m\n\u001b[1;32m---> 59\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m()\n\u001b[0;32m     62\u001b[0m     d_o \u001b[38;5;241m=\u001b[39m outputs[t]\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[0;32m     63\u001b[0m     \u001b[38;5;66;03m# Aprox 1 linea para backpropagate en los output (derivada del cross-entropy)\u001b[39;00m\n\u001b[0;32m     64\u001b[0m     \u001b[38;5;66;03m# Si se sienten perdidos refieran a esta lectura: http://cs231n.github.io/neural-networks-case-study/#grad\u001b[39;00m\n\u001b[0;32m     65\u001b[0m     \u001b[38;5;66;03m# d_o[...] -=\u001b[39;00m\n\u001b[0;32m     66\u001b[0m     \u001b[38;5;66;03m# YOUR CODE HERE\u001b[39;00m\n",
-      "\u001b[1;31mNotImplementedError\u001b[0m: "
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[49], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m check_scalar(loss, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0xf0c8ccc9\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m tick\u001b[38;5;241m.\u001b[39mmarks(\u001b[38;5;241m5\u001b[39m):        \n\u001b[1;32m----> 7\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m check_hash(grads[\u001b[38;5;241m0\u001b[39m], ((\u001b[38;5;241m50\u001b[39m, \u001b[38;5;241m4\u001b[39m), \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m16.16536590645467\u001b[39m))\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m tick\u001b[38;5;241m.\u001b[39mmarks(\u001b[38;5;241m5\u001b[39m):        \n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m check_hash(grads[\u001b[38;5;241m1\u001b[39m], ((\u001b[38;5;241m50\u001b[39m, \u001b[38;5;241m50\u001b[39m), \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m155.12594909703253\u001b[39m))\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
      ]
     }
    ],
@@ -1644,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "7d0649f4",
    "metadata": {
     "ExecuteTime": {
@@ -3615,7 +3637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
